# NovaChat

./: CMakeLists.txt  CMakePresets.json
NovaChatClient/: NovaChatClient.pro  Singleton.h  adduseritem.cpp  adduseritem.h  adduseritem.ui  applyfriend.cpp  applyfriend.h  applyfriend.ui  bubbleframe.cpp  bubbleframe.h  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatitembase.cpp  chatpage.cpp  chatpage.h  chatpage.ui  chatuserlist.cpp  chatuserlist.h  chatuserwid.cpp  chatuserwid.h  chatuserwid.ui  chatview.cpp  chatview.h  clickedbtn.cpp  clickedbtn.h  clickedlabel.cpp  clickedlabel.h  clickedoncelabel.h  config.ini  contactuserlist.cpp  contactuserlist.h  conuseritem.ui  customizeedit.h  findsuccessdlg.cpp  findsuccessdlg.h  findsuccessdlg.ui  friendlabel.cpp  friendlabel.ui  global.cpp  (+34 more)
NovaChatClient/style/: stylesheet.qss
NovaChatGateServer/: CMakeLists.txt  CServer.h  ConfigMgr.h  Cserver.cpp  GateServer.cpp  HttpConnection.cpp  LogicSystem.cpp  LogicSystem.h  PostgreSQLMgr.cpp  SQLMgr.cpp  StatusGrpcClient.cpp  StatusServiceImpl.h  VerifyGrpcClient.h  config.ini  const.h  message.pb.cc  message.pb.h  message.proto
NovaChatServer/: CMakeLists.txt  CServer.h  CSession.cpp  CSession.h  ChatGrpcClient.cpp  ChatGrpcClient.h  ChatServer.cpp  ChatServiceImpl.cpp  ChatServiceImpl.h  ConfigMgr.cpp  Cserver.cpp  LogicSystem.cpp  LogicSystem.h  MsgNode.cpp  MsgNode.h  PostgreSQLMgr.cpp  PostgreSQLMgr.h  RedisMgr.cpp  RedisMgr.h  SQLMgr.cpp  SQLMgr.h  StatusGrpcClient.h  config.ini  const.h  data.h  message.pb.cc  message.pb.h
NovaChatStatusServer/: AsioIOServicePool.cpp  CMakeLists.txt  ChatGrpcClient.cpp  ChatGrpcClient.h  PostgreSQLMgr.cpp  PostgreSQLMgr.h  SQLMgr.cpp  SQLMgr.h  StatusServer.cpp  StatusServiceImpl.cpp  StatusServiceImpl.h  config.ini  const.h
NovaChatVerifyServer/: config.js  package-lock.json  package.json  proto.js  server.js
VerifyServer/: config.json  email.js  message.proto  redis.js
include/: AsioIOServicePool.h  GateServer.h  HttpConnection.h  LogicSystem.h  PostgreSQLMgr.h  SQLMgr.h  Singleton.h  StatusGrpcClient.h  const.h
